--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#ffc400</color>
+    <color name="colorPrimaryDark">#ff9100</color>
+    <color name="maincolor">#000000</color>
+    <color name="textcolor">#ffffff</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
