--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/textcolor"
+    android:background="@color/maincolor"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,12 +13,12 @@
         android:layout_height="40dp"
         android:layout_marginBottom="356dp"
         android:gravity="center"
-        android:text=" "
-        android:textColor="@color/design_default_color_primary_dark"
+        android:text="9 m/s2"
+        android:textColor="@color/textcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/labelvalue"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
@@ -27,16 +27,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="220dp"
         android:layout_marginEnd="160dp"
         android:layout_marginRight="160dp"
-        android:background="@color/textcolor"
+        android:layout_marginBottom="236dp"
+        android:background="@color/colorPrimaryDark"
         android:capitalize="none"
         android:text="Sense"
         android:textAllCaps="false"
+        android:textColor="@color/textcolor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/label_result" />
 
     <TextView
         android:id="@+id/label_app"
@@ -47,13 +49,13 @@
         android:gravity="center"
         android:text="@string/sensorlabel"
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/textcolor"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/labelvalue"
         android:layout_width="match_parent"
         android:layout_height="26sp"
         android:layout_marginStart="8dp"
@@ -61,9 +63,26 @@
         android:layout_marginBottom="400dp"
         android:gravity="center"
         android:text="@string/readinglabel"
-        android:textColor="@color/design_default_color_primary_dark"
+        android:textColor="@color/textcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btn_export"
+        android:layout_width="88dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginRight="160dp"
+        android:background="@color/textcolor"
+        android:capitalize="none"
+        android:text="Export"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_sound" />
 </android.support.constraint.ConstraintLayout>
